clientelling/objects/Purchases__c.object
<CustomObject>
    <description>Retail IDO Custom Object</description>
    <fields>
        <fullName>Color__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>HYPERLINK( &quot;/&quot;+ Customer__r.Id,  Customer__r.Customer_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Item_Interestsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>IMAGE(&apos;/resource/1383764845000/sap_logo&apos;,&quot;SAP&quot;,20,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Small__c</fullName>
        <formula>IMAGE(Product__r.Small_Img_URL__c , &quot;Image&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Product__r.Image_URL__c  , &quot;No Image&quot;, 180, 120)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_number__c</fullName>
        <label>Lot number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Purchase Amount</label>
        <summarizedField>Purchase_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Item__c.Purchase_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Status__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Ship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchasesab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Mobile App</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchasesab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>About to Expire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Purchase History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Purchase ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>